umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_openbabel_razinger_fig7_42.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 16
bond_count: 16
sum_formula: C12O4
graph6: "Ol`@?_@?OC?O@?@?@??O?"
