umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_ovjtools_Sucrose.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 45
bond_count: 46
sum_formula: C12H22O11
graph6: ldGA??OOPG_C?_??_?G?C??K??G??G?@??A????G?A?G???G???C???@????G????O????_???@?????_????G????@?????A?????C?????A?????@??????_?????C??????O??????_?????@???????_??????G???
